--- a/SafariStudent/app/src/main/res/layout/home_student.xml
+++ b/SafariStudent/app/src/main/res/layout/home_student.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -18,6 +18,20 @@
         android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold"
+        android:onClick="scan"
         android:layout_centerInParent="true"/>
+    
+    <TextView
+        android:id="@+id/resultView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/buttonStart"
+        android:layout_marginTop="25dp"
+        android:layout_centerHorizontal="true"
+        android:text="content"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:padding="5dp"
+        android:gravity="center_horizontal"/>
 
 </RelativeLayout>
