--- a/SafariStudent/app/src/main/res/layout/home_student.xml
+++ b/SafariStudent/app/src/main/res/layout/home_student.xml
@@ -18,7 +18,7 @@
         android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:onClick="scan"
+        android:onClick="processMessage1"
         android:layout_centerInParent="true"/>
     
     <TextView
