--- a/SafariTeacher/app/src/main/res/layout/home_teacher.xml
+++ b/SafariTeacher/app/src/main/res/layout/home_teacher.xml
@@ -19,7 +19,6 @@
         android:textSize="@dimen/menu_title"
         android:textStyle="bold" />
 
-
     <Button
         android:id="@+id/buttonScannedLogs"
         android:layout_width="match_parent"
@@ -30,6 +29,20 @@
         android:padding="10dp"
         android:background="@color/scannedLogs"
         android:text="@string/title_scannedLogs"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/buttonHelpAlerts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:padding="10dp"
+        android:background="@color/helpAlerts"
+        android:text="@string/title_helpAlerts"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:textStyle="bold" />
@@ -63,15 +76,15 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/buttonHelpAlerts"
+        android:id="@+id/buttonSettings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
         android:padding="10dp"
-        android:background="@color/helpAlerts"
-        android:text="@string/title_helpAlerts"
+        android:background="@color/settings"
+        android:text="@string/title_settings"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:textStyle="bold" />
