--- a/SafariTeacher/app/src/main/res/layout/each_alert.xml
+++ b/SafariTeacher/app/src/main/res/layout/each_alert.xml
@@ -7,7 +7,7 @@
     android:weightSum="4">
 
     <TextView
-        android:id="@+id/dateTimeView"
+        android:id="@+id/dateTime"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_weight="1"
@@ -18,7 +18,7 @@
         android:textSize="16dp" />
 
     <TextView
-        android:id="@+id/studentView"
+        android:id="@+id/studentName"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_weight="1"
