--- a/SafariTeacher/app/src/main/res/layout/each_alert.xml
+++ b/SafariTeacher/app/src/main/res/layout/each_alert.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/white"
-    android:weightSum="4">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/dateTime"
-        android:layout_width="match_parent"
+        android:layout_width="176dp"
         android:layout_height="50dp"
-        android:layout_weight="1"
+        android:layout_margin="5dp"
         android:gravity="center"
         android:text="dateTimeStamp"
         android:textAlignment="center"
@@ -19,9 +19,9 @@
 
     <TextView
         android:id="@+id/studentName"
-        android:layout_width="match_parent"
+        android:layout_width="121dp"
         android:layout_height="50dp"
-        android:layout_weight="1"
+        android:layout_margin="5dp"
         android:gravity="center"
         android:text="studentName"
         android:textAlignment="center"
@@ -30,11 +30,11 @@
 
     <TextView
         android:id="@+id/alertType"
-        android:layout_width="match_parent"
+        android:layout_width="107dp"
         android:layout_height="50dp"
-        android:layout_weight="1"
+        android:layout_margin="5dp"
         android:gravity="center"
-        android:text="temporary/urgent"
+        android:text="alert"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="16dp" />
@@ -43,9 +43,9 @@
         android:id="@+id/durationElapsed"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_weight="1"
+        android:layout_margin="5dp"
         android:gravity="center"
-        android:text="durationElapsed"
+        android:text="duration"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="16dp" />
