--- a/SafariTeacher/app/src/main/res/layout/list_alerts.xml
+++ b/SafariTeacher/app/src/main/res/layout/list_alerts.xml
@@ -17,12 +17,13 @@
         android:textStyle="bold"
         android:text="@string/title_helpAlertsList"/>
 
-    <ListView android:id="@+id/list"
+    <ListView
+        android:id="@+id/list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="2"
-        android:drawSelectorOnTop="false">
-    </ListView>
+        android:drawSelectorOnTop="false"
+        android:paddingBottom="10dp"></ListView>
 
 
 </LinearLayout>
