--- a/SafariTeacher/app/src/main/res/layout/update_settings.xml
+++ b/SafariTeacher/app/src/main/res/layout/update_settings.xml
@@ -17,5 +17,125 @@
         android:textStyle="bold"
         android:text="@string/title_settingsPage" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/tempAlertView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:text="Temporary Alert"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="#27ae60"
+        android:textAllCaps="true"/>
 
+    <TextView
+        android:id="@+id/tempMessageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:text="Alert Message"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:id="@+id/tempMessageEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        android:text="temporary message"
+        android:textColor="#7f8c8d"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/tempDurationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:text="Alert Duration"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:id="@+id/tempDurationEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        android:text="temporary duration"
+        android:textColor="#7f8c8d"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/urgentAlertView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="20dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="30dp"
+        android:text="Urgent Alert"
+        android:textAllCaps="true"
+        android:textColor="#e74c3c"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/urgentMessageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:text="Alert Message"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:id="@+id/urgentMessageEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        android:text="urgent message"
+        android:textColor="#7f8c8d"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/urgentDurationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:text="Alert Duration"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:id="@+id/urgentDurationEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        android:text="urgent duration"
+        android:textColor="#7f8c8d"
+        android:textSize="18sp" />
+
+</LinearLayout>
