rendered UI for student's messages page and implemented functionalities as well

--- a/SafariTeacher/app/src/main/res/layout/update_message.xml
+++ b/SafariTeacher/app/src/main/res/layout/update_message.xml
@@ -17,5 +17,104 @@
         android:textStyle="bold"
         android:text="@string/title_transMessageList"/>
 
+    <TextView
+        android:id="@+id/startView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:text="start"
+        android:textSize="20sp"
+        android:textStyle="bold|italic"
+        android:textColor="#27ae60"
+        android:textAllCaps="true"/>
+
+    <TextView
+        android:id="@+id/messageView0"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:text="message0"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/messageView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:text="message1"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/midView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:text="Learning Buddy Leads"
+        android:textSize="20sp"
+        android:textStyle="bold|italic"
+        android:textColor="@color/transMessage"
+        android:textAllCaps="true"/>
+
+    <TextView
+        android:id="@+id/messageView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:text="message2"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/messageView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:text="message3"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/messageView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:text="message4"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/endView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:text="End"
+        android:textSize="20sp"
+        android:textStyle="bold|italic"
+        android:textColor="#e74c3c"
+        android:textAllCaps="true"/>
+
+    <TextView
+        android:id="@+id/messageView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:text="message5"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
+
 </LinearLayout>
 
