--- a/SafariTeacher/app/src/main/res/layout/list_mappings.xml
+++ b/SafariTeacher/app/src/main/res/layout/list_mappings.xml
@@ -17,5 +17,13 @@
         android:textStyle="bold"
         android:text="@string/title_qrContentPage" />
 
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="2"
+        android:drawSelectorOnTop="false"
+        android:paddingBottom="10dp"></ListView>
+
 </LinearLayout>
 
